--- a/frontend/src/component/show_xqq/show_xqq.css
+++ b/frontend/src/component/show_xqq/show_xqq.css
@@ -3,13 +3,21 @@
 }
 
 .por {
-    content: '';
-    display: block;
     width: 90px;
     height: 90px;
     border-radius: 50%;
-    transform: translate(30px, -30px);
-    
-    background-size: cover;
+    overflow: hidden;
     border: 3px solid #fff;
+}
+
+.por img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    transition: .3s;
 }
