--- a/frontend/src/component/Comment/Comment.css
+++ b/frontend/src/component/Comment/Comment.css
@@ -23,34 +23,13 @@
     text-shadow: 0 0 10px #e1daff;
 }
 
-input[type="text"] {
-    width: 100%;
-    height: 50px;
-    margin: 10px 0;
-    box-sizing: border-box;
-    color: rgb(62, 69, 99);
-    border: 5px solid transparent;
-    background: rgba(255, 255, 255, .5);
-    border-radius: 100px;
-    padding: 5px 20px 0 20px;
-    transition: 0.3s;
-    font-size: 18px;
-    outline: none
-}
-
-input[type="text"]:hover {
-    background: rgba(255, 255, 255, 0);
-    border: 5px solid #ffffff;
-}
-
 input::placeholder {
     color: #838ec1;
 }
 
-.textarea {
-    width: 100%;
+.textarea_now {
+    width: 450px;
     height: 50px;
-    margin: 20px 0;
     box-sizing: border-box;
     color: rgb(62, 69, 99);
     border: 5px solid transparent;
