--- a/frontend/src/component/xialacaidan/xialacaidan.css
+++ b/frontend/src/component/xialacaidan/xialacaidan.css
@@ -19,7 +19,7 @@
     z-index: 1000; /* 确保在其他元素之上 */
 }
 
-.button, .portrait {
+.button {
     background-color: #5f7397;
     width: 100%;
     max-width: 170px; /* 在大屏幕上限制最大宽度 */
@@ -29,18 +29,6 @@
     line-height: 65px;
     transition: .3s;
     cursor: pointer;
-}
-
-.portrait::before {
-    content: '';
-    display: block;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transform: translate(30px, -30px);
-    background-image: url('./bmq.png');
-    background-size: cover;
-    border: 10px solid #fff;
 }
 
 .information {
@@ -83,4 +71,18 @@
     line-height: 65px;
     transform: translate(-20px, -10px);
     height: auto;
+}
+
+.por1 {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 5px solid #fff;
+}
+
+.por1 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
