--- a/frontend/src/component/mylike/mylike.css
+++ b/frontend/src/component/mylike/mylike.css
@@ -19,7 +19,7 @@
 .title0 {
     font-size: 40px;
     color: #fff;
-    text-shadow: 0 0 10px #f9d2ff;
+    text-shadow: 0 0 10px #d2f3ff;
 }
 
 .mywidth {
