--- a/frontend/src/component/others_like/others_like.css
+++ b/frontend/src/component/others_like/others_like.css
@@ -19,7 +19,7 @@
 .title0 {
     font-size: 40px;
     color: #fff;
-    text-shadow: 0 0 10px #f9d2ff;
+    text-shadow: 0 0 10px #ffe7da;
 }
 
 .mywidth {
